# boa_docking_cpp_meta

./: README.md
pallet_detection_and_docking/: CMakeLists.txt  package.xml
pallet_detection_and_docking/include/pallet_detection_and_docking/: PathCreateUtilities.h  RobotMover.h  utilities.h
pallet_detection_and_docking/launch/: boa_docking.launch
pallet_detection_and_docking/scripts/: dbscan_pallet_detect.py  dbscan_pallet_detect_test.py
pallet_detection_and_docking/src/: pallet_detection.cpp  pallet_docking.cpp
tracking_pid/: setup.py
tracking_pid/cfg/: Pid.cfg  TargetVelocity.cfg
tracking_pid/src/tracking_pid/: path_interpolator.py
tracking_pid/test/: test_tracking_pid_system.py
tracking_pid/test/tracking_pid/: controller.rviz  test_tracking_pid.test
