<?xml version="1.0"?>
<package format="2">
  <name>pallet_detection_and_docking</name>
  <version>1.0.0</version>
  <description>Detect obstacles in form of line segments and circles from 2D laser scans.</description>
  <maintainer email="mateusz.przybyla@put.poznan.pl">Mateusz Przybyla</maintainer>
  <author>Mateusz Przybyla</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>tf</depend>
  <depend>rviz</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>std_msgs</depend>
  <depend>mbf_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>advobot_base</depend>
  <depend>actionlib_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>visualization_msgs</depend>

</package>
